Fix marketplace inbox alignment

--- a/src/modules/better-ui/styles/inbox.css
+++ b/src/modules/better-ui/styles/inbox.css
@@ -213,12 +213,6 @@ div#messengerUINotification {
   order: 1;
 }
 
-#messengerUINotification .notificationMessageList .tab[data-tab="marketplace"] .message .actions {
-  order: 2;
-  float: none;
-  margin-top: 5px;
-}
-
 #messengerUINotification .notificationMessageList .tab[data-tab="marketplace"] .message .date {
   order: 3;
   margin: 10px;
